@@ -1,3 +1,9 @@
+2010-08-19  Doug Evans  <dje@google.com>
+
+	PR exp/11926
+	* gdb.base/printcmds.exp (test_integer_literals_rejected): Add
+	test of "p 0x1.1".
+
 2010-08-09  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* gdb.python/python.exp (show height, set height 10)
